--- a/front.html
+++ b/front.html
@@ -9,9 +9,9 @@
 <body>
 
     <header>
-        <div class="animation-block">
-            <div class="floating"><h1>Wat is front end</h1></div>
-        </div>
+        <div class="animation-container">
+            <div class="animation" style="animation-name: scale;"><h1 id="front">Wat is front-end?</h1></div>
+          </div>
         <a href="index.html" class="back-button">Terug</a>
     </header>
 
@@ -22,7 +22,7 @@
         </section>
 
         <section id="animations">
-            <h2>bewegend blok (typisch front end)</h2>
+            <h2 id="blok">bewegend blok (typisch front end)</h2>
             <div class="animation-container">
                 <div class="box"></div>
             </div>
